// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/index.vue snapshot renders correctly if locale is "en" 1`] = `
<section
  class="section"
>
  <div
    class="columns is-mobile"
  >
    <div
      class="column"
    >
      <div
        class="card"
      >
        <header
          class="card-header"
        >
          <p
            class="card-header-title has-text-grey"
          >
            
        Free
      
          </p>
        </header>
         
        <div
          class="card-content"
        >
          <div
            class="content has-text-centered"
          >
            <span
              class="icon has-text-primary is-large"
            >
              <i
                class="mdi mdi-github-circle mdi-48px"
              />
            </span>
          </div>
        </div>
         
        <footer
          class="card-footer"
        >
          <div
            class="card-footer-item"
          >
            <span>
              <span>
                Open source on 
                <a
                  href="https://github.com/buefy/buefy"
                >
                  GitHub
                </a>
              </span>
            </span>
          </div>
        </footer>
      </div>
    </div>
     
    <div
      class="column"
    >
      <div
        class="card"
      >
        <header
          class="card-header"
        >
          <p
            class="card-header-title has-text-grey"
          >
            
        Responsive
      
          </p>
        </header>
         
        <div
          class="card-content"
        >
          <div
            class="content has-text-centered"
          >
            <span
              class="icon has-text-primary is-large"
            >
              <i
                class="mdi mdi-cellphone-link mdi-48px"
              />
            </span>
          </div>
        </div>
         
        <footer
          class="card-footer"
        >
          <div
            class="card-footer-item"
          >
            <span>
              <span>
                <b
                  class="has-text-grey"
                >
                  Every
                </b>
                 component is responsive
              </span>
            </span>
          </div>
        </footer>
      </div>
    </div>
     
    <div
      class="column"
    >
      <div
        class="card"
      >
        <header
          class="card-header"
        >
          <p
            class="card-header-title has-text-grey"
          >
            
        Modern
      
          </p>
        </header>
         
        <div
          class="card-content"
        >
          <div
            class="content has-text-centered"
          >
            <span
              class="icon has-text-primary is-large"
            >
              <i
                class="mdi mdi-alert-decagram mdi-48px"
              />
            </span>
          </div>
        </div>
         
        <footer
          class="card-footer"
        >
          <div
            class="card-footer-item"
          >
            <span>
              <span>
                Built with 
                <a
                  href="https://vuejs.org/"
                >
                  Vue.js
                </a>
                 and 
                <a
                  href="http://bulma.io/"
                >
                  Bulma
                </a>
              </span>
            </span>
          </div>
        </footer>
      </div>
    </div>
     
    <div
      class="column"
    >
      <div
        class="card"
      >
        <header
          class="card-header"
        >
          <p
            class="card-header-title has-text-grey"
          >
            
        Lightweight
      
          </p>
        </header>
         
        <div
          class="card-content"
        >
          <div
            class="content has-text-centered"
          >
            <span
              class="icon has-text-primary is-large"
            >
              <i
                class="mdi mdi-arrange-bring-to-front mdi-48px"
              />
            </span>
          </div>
        </div>
         
        <footer
          class="card-footer"
        >
          <div
            class="card-footer-item"
          >
            <span>
              
      No other internal dependency
    
            </span>
          </div>
        </footer>
      </div>
    </div>
     
    <div
      class="column"
    >
      <div
        class="card"
      >
        <header
          class="card-header"
        >
          <p
            class="card-header-title has-text-grey"
          >
            
        Store Sample
      
          </p>
        </header>
         
        <div
          class="card-content"
        >
          <div
            class="content has-text-centered"
          >
            <span
              class="icon has-text-primary is-large"
            >
              <i
                class="mdi mdi-counter mdi-48px"
              />
            </span>
          </div>
        </div>
         
        <footer
          class="card-footer"
        >
          <div
            class="card-footer-item"
          >
            <span>
              <button
                class="button plus"
                type="button"
              >
                <span
                  class="icon is-small"
                >
                  <i
                    class="mdi mdi-plus"
                  />
                </span>
                 
                <span />
                 
                <!---->
              </button>
               
              <span
                class="subtitle"
              >
                0
              </span>
               
              <button
                class="button minus"
                type="button"
              >
                <span
                  class="icon is-small"
                >
                  <i
                    class="mdi mdi-minus"
                  />
                </span>
                 
                <span />
                 
                <!---->
              </button>
            </span>
          </div>
        </footer>
      </div>
    </div>
  </div>
</section>
`;

exports[`pages/index.vue snapshot renders correctly if locale is "ja" 1`] = `
<section
  class="section"
>
  <div
    class="columns is-mobile"
  >
    <div
      class="column"
    >
      <div
        class="card"
      >
        <header
          class="card-header"
        >
          <p
            class="card-header-title has-text-grey"
          >
            
        無料
      
          </p>
        </header>
         
        <div
          class="card-content"
        >
          <div
            class="content has-text-centered"
          >
            <span
              class="icon has-text-primary is-large"
            >
              <i
                class="mdi mdi-github-circle mdi-48px"
              />
            </span>
          </div>
        </div>
         
        <footer
          class="card-footer"
        >
          <div
            class="card-footer-item"
          >
            <span>
              <span>
                <a
                  href="https://github.com/buefy/buefy"
                >
                  GitHub
                </a>
                 上でオープンソース開発
              </span>
            </span>
          </div>
        </footer>
      </div>
    </div>
     
    <div
      class="column"
    >
      <div
        class="card"
      >
        <header
          class="card-header"
        >
          <p
            class="card-header-title has-text-grey"
          >
            
        レスポンシブ デザイン
      
          </p>
        </header>
         
        <div
          class="card-content"
        >
          <div
            class="content has-text-centered"
          >
            <span
              class="icon has-text-primary is-large"
            >
              <i
                class="mdi mdi-cellphone-link mdi-48px"
              />
            </span>
          </div>
        </div>
         
        <footer
          class="card-footer"
        >
          <div
            class="card-footer-item"
          >
            <span>
              <span>
                <b
                  class="has-text-grey"
                >
                  すべての
                </b>
                コンポーネントがレスポンシブ
              </span>
            </span>
          </div>
        </footer>
      </div>
    </div>
     
    <div
      class="column"
    >
      <div
        class="card"
      >
        <header
          class="card-header"
        >
          <p
            class="card-header-title has-text-grey"
          >
            
        モダンUI
      
          </p>
        </header>
         
        <div
          class="card-content"
        >
          <div
            class="content has-text-centered"
          >
            <span
              class="icon has-text-primary is-large"
            >
              <i
                class="mdi mdi-alert-decagram mdi-48px"
              />
            </span>
          </div>
        </div>
         
        <footer
          class="card-footer"
        >
          <div
            class="card-footer-item"
          >
            <span>
              <span>
                <a
                  href="https://vuejs.org/"
                >
                  Vue.js
                </a>
                 と 
                <a
                  href="http://bulma.io/"
                >
                  Bulma
                </a>
                 で作成
              </span>
            </span>
          </div>
        </footer>
      </div>
    </div>
     
    <div
      class="column"
    >
      <div
        class="card"
      >
        <header
          class="card-header"
        >
          <p
            class="card-header-title has-text-grey"
          >
            
        軽量
      
          </p>
        </header>
         
        <div
          class="card-content"
        >
          <div
            class="content has-text-centered"
          >
            <span
              class="icon has-text-primary is-large"
            >
              <i
                class="mdi mdi-arrange-bring-to-front mdi-48px"
              />
            </span>
          </div>
        </div>
         
        <footer
          class="card-footer"
        >
          <div
            class="card-footer-item"
          >
            <span>
              
      他のライブラリに依存しない
    
            </span>
          </div>
        </footer>
      </div>
    </div>
     
    <div
      class="column"
    >
      <div
        class="card"
      >
        <header
          class="card-header"
        >
          <p
            class="card-header-title has-text-grey"
          >
            
        Store Sample
      
          </p>
        </header>
         
        <div
          class="card-content"
        >
          <div
            class="content has-text-centered"
          >
            <span
              class="icon has-text-primary is-large"
            >
              <i
                class="mdi mdi-counter mdi-48px"
              />
            </span>
          </div>
        </div>
         
        <footer
          class="card-footer"
        >
          <div
            class="card-footer-item"
          >
            <span>
              <button
                class="button plus"
                type="button"
              >
                <span
                  class="icon is-small"
                >
                  <i
                    class="mdi mdi-plus"
                  />
                </span>
                 
                <span />
                 
                <!---->
              </button>
               
              <span
                class="subtitle"
              >
                0
              </span>
               
              <button
                class="button minus"
                type="button"
              >
                <span
                  class="icon is-small"
                >
                  <i
                    class="mdi mdi-minus"
                  />
                </span>
                 
                <span />
                 
                <!---->
              </button>
            </span>
          </div>
        </footer>
      </div>
    </div>
  </div>
</section>
`;
